Add Part 1 Exercise React part 1

--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,7 +1,13 @@
 .choresText {
-   color: black;
+   color: blue ;
+   font-size: 2.0vw;
+   font-style: italic;
 }
 
 .choresHeading {
    color: black;
+   font-size: 2.0vw;
+   text-decoration: underline;
+  
+ 
 }
