--- a/part1/exercises/src/components/MovieList.module.css
+++ b/part1/exercises/src/components/MovieList.module.css
@@ -1,7 +1,10 @@
 .movieText {
-   color: black;
+   color: green;
+   font-size: 2.0vw;
+   text-align: left;
+
 }
 
 .movieHeading {
-   color: black;
+   text-align: left;
 }
