--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,13 +1,16 @@
 .choresText {
    color: blue ;
-   font-size: 2.0vw;
+   font-size: 1.5vw;
    font-style: italic;
+   text-align: left;
 }
 
 .choresHeading {
-   color: black;
-   font-size: 2.0vw;
+   text-align: left;
+   color: red;
+   font-size: 1.5vw;
    text-decoration: underline;
+   
   
  
 }
